# ARMv6-Emulator

./: .gitignore  CMakeLists.txt  README.md  emulator  firmware.elf  instructions.txt  isntructions.txt  log.txt  log1.txt  log2.txt  out.txt  server  test.txt
api/: cpuModel.cpp  server.cpp
api/testing/: package-lock.json  package.json  test.js
elf/: compile.md  firmware.elf  instructions.txt  linker.ld  main.c  setup.c  test.txt
elf/include/: semihosting.h
elf/src/: main.c  semihosting.c  setup.c
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  DisassemblerPanel.tsx  MemoryPanel.tsx  NavBar.tsx  OutputPanel.tsx  PipelinePanel.tsx  RegisterPanel.tsx  Toolbar.tsx  UploadPanel.tsx
frontend/src/emulator/: cpu.ts  elf.ts  ws.ts
frontend/src/store/: emulatorStore.ts  wsEmulatorStore.ts
include/: compiler.hpp  cpu.hpp  emulator.hpp  registers.hpp
src/: compiler.cpp  cpu.cpp  cross_compiler.cpp  elf.c  emulator.cpp  main.cpp  organised.cpp  registers.cpp  test.cpp  uart.cpp
test/: alu.cpp  ldr.cpp  misc.cpp  str.cpp
